unpackaged/main/default/objects/bt_stripe__Payment_Method__c/fields/bt_stripe__Third_Party_Token__c.field-meta.xml
<CustomField>
    <fullName>bt_stripe__Third_Party_Token__c</fullName>
    <inlineHelpText>The token identifying the payment method at the external gateway. Specifically to support Spreedly for third party payment method tokens.</inlineHelpText>
    <label>Third Party Token</label>
    <length>255</length>
    <type>Text</type>
</CustomField>