unpackaged/main/default/objects/bt_stripe__Payment_Method__c/fields/bt_stripe__Type__c.field-meta.xml
<CustomField>
    <fullName>bt_stripe__Type__c</fullName>
    <description>For all non card or ACH payment method types to capture the source type, such as Alipay, Apple Pay, etc. Set automatically.</description>
    <inlineHelpText>For all non card or ACH payment method types to capture the source type, such as Alipay, Apple Pay, etc. Set automatically.</inlineHelpText>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>alipay</fullName>
                <label>Ali Pay</label>
            </value>
            <value>
                <fullName>bacs_debit</fullName>
                <label>Bacs Debit</label>
            </value>
            <value>
                <fullName>bancontact</fullName>
                <label>Bancontact</label>
            </value>
            <value>
                <fullName>au_becs_debit</fullName>
                <label>BECS Direct Debit</label>
            </value>
            <value>
                <fullName>card</fullName>
                <label>Card</label>
            </value>
            <value>
                <fullName>card_present</fullName>
                <label>Card Present</label>
            </value>
            <value>
                <fullName>eps</fullName>
                <label>EPS</label>
            </value>
            <value>
                <fullName>fpx</fullName>
                <label>FPX</label>
            </value>
            <value>
                <fullName>giropay</fullName>
                <label>Giro Pay</label>
            </value>
            <value>
                <fullName>grabpay</fullName>
                <label>Grab Pay</label>
            </value>
            <value>
                <fullName>ideal</fullName>
                <label>Ideal</label>
            </value>
            <value>
                <fullName>interac_present</fullName>
                <label>Interac Present</label>
            </value>
            <value>
                <fullName>oxxo</fullName>
                <label>OXXO</label>
            </value>
            <value>
                <fullName>p24</fullName>
            </value>
            <value>
                <fullName>sepa_debit</fullName>
                <label>Sepa Debit</label>
            </value>
            <value>
                <fullName>sofort</fullName>
                <label>Sofort</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>