unpackaged/main/default/objects/bt_stripe__Payment_Method__c/fields/bt_stripe__User_Agent__c.field-meta.xml
<CustomField>
    <fullName>bt_stripe__User_Agent__c</fullName>
    <description>The user agent of the browser from which the mandate was accepted by the customer.</description>
    <inlineHelpText>The user agent of the browser from which the mandate was accepted by the customer.</inlineHelpText>
    <label>User Agent</label>
    <length>255</length>
    <type>Text</type>
</CustomField>