unpackaged/main/default/objects/bt_stripe__Payment_Method__c/fields/Formula_Name__c.field-meta.xml
<CustomField>
    <fullName>Formula_Name__c</fullName>
    <formula>ITR_ID__c + &#39; - &#39; +    bt_stripe__Card_Holder_Name__c    + &#39; - &#39; + bt_stripe__Card_Last_4_Digit__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Formula Name</label>
    <type>Text</type>
</CustomField>