unpackaged/main/default/objects/bt_stripe__Payment_Method__c/fields/ITR_ID__c.field-meta.xml
<CustomField>
    <fullName>ITR_ID__c</fullName>
    <formula>text(bt_stripe__Account__r.ITR_Id__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>ITR ID</label>
    <type>Text</type>
</CustomField>