unpackaged/main/default/objects/bt_stripe__Payment_Method__c/fields/Payment_Method_Type__c.field-meta.xml
<CustomField>
    <fullName>Payment_Method_Type__c</fullName>
    <label>Payment Method Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Card</fullName>
            </value>
            <value>
                <fullName>ACH</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>