unpackaged/main/default/objects/bt_stripe__Payment_Method__c/recordTypes/bt_stripe__Other.recordType-meta.xml
<RecordType>
    <fullName>bt_stripe__Other</fullName>
    <active>true</active>
    <description>Use for all non-card or ACH payment methods.</description>
    <label>Other</label>
</RecordType>