unpackaged/main/default/objects/bt_stripe__Payment_Method__c/validationRules/bt_stripe__Micro_Deposit_Field_Value_Greater_Than_1.validationRule-meta.xml
<ValidationRule>
    <fullName>bt_stripe__Micro_Deposit_Field_Value_Greater_Than_1</fullName>
    <active>true</active>
    <description>When entering micro-deposit amounts, the amount should be entered for example as &quot;32&quot;, not &quot;0.32&quot; or &quot;.32).</description>
    <errorConditionFormula>OR(AND(NOT(ISBLANK( bt_stripe__Micro_Deposit_One__c )), bt_stripe__Micro_Deposit_One__c &lt;1),AND(NOT(ISBLANK( bt_stripe__Micro_Deposit_Two__c )), bt_stripe__Micro_Deposit_Two__c &lt;1))</errorConditionFormula>
    <errorMessage>When entering micro-deposit amounts, the amount should be entered for example as &quot;32&quot;, not &quot;0.32&quot; or &quot;.32).</errorMessage>
</ValidationRule>