unpackaged/main/default/objects/bt_stripe__Payment_Method__c/listViews/bt_stripe__All_ACH_Payment_Methods.listView-meta.xml
<ListView>
    <fullName>bt_stripe__All_ACH_Payment_Methods</fullName>
    <columns>NAME</columns>
    <columns>bt_stripe__Card_Holder_Name__c</columns>
    <columns>bt_stripe__Account__c</columns>
    <columns>bt_stripe__Contact__c</columns>
    <columns>bt_stripe__Payment_Method_Status__c</columns>
    <columns>bt_stripe__Account_Holder_Type__c</columns>
    <columns>bt_stripe__Country_ISO__c</columns>
    <columns>bt_stripe__Currency_ISO__c</columns>
    <columns>bt_stripe__Payment_Gateway__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>bt_stripe__Payment_Method__c.bt_stripe__ACH</value>
    </filters>
    <label>All ACH Payment Methods</label>
</ListView>