unpackaged/main/default/objects/bt_stripe__Payment_Method__c/listViews/Payment_Methods_Card.listView-meta.xml
<ListView>
    <fullName>Payment_Methods_Card</fullName>
    <columns>NAME</columns>
    <columns>bt_stripe__Card_Holder_Name__c</columns>
    <columns>bt_stripe__Send_to_Gateway__c</columns>
    <columns>Formula_Name__c</columns>
    <columns>bt_stripe__Account__c</columns>
    <columns>bt_stripe__Payment_Method_Status__c</columns>
    <columns>RECORDTYPE</columns>
    <columns>bt_stripe__Payment_Gateway__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>bt_stripe__Payment_Method__c.bt_stripe__Charge_Card</value>
    </filters>
    <label>Payment Methods - Card</label>
    <sharedTo>
        <group>ITR_Billing_Team</group>
    </sharedTo>
</ListView>